--- a/learn/jsp/MyJsp02/getName2.html
+++ b/learn/jsp/MyJsp02/getName2.html
@@ -1,7 +1,8 @@
 <HTML>
 <BODY>
-<FORM METHOD=POST ACTION="SaveName.jsp">
+<FORM METHOD=POST ACTION="SaveName2.jsp">
 What's your name? <INPUT TYPE=TEXT NAME=username SIZE=20><BR>
+What's your  husband's name? <INPUT TYPE=TEXT NAME=userhname SIZE=20><BR>
 What's your e-mail address? <INPUT TYPE=TEXT NAME=email SIZE=20><BR>
 What's your age? <INPUT TYPE=TEXT NAME=age SIZE=4>
 <P><INPUT TYPE=SUBMIT>
