Added HospitalMgmt Proj

--- a/learn/html/Godblessus.html
+++ b/learn/html/Godblessus.html
@@ -4,11 +4,11 @@
 <body style="background-color: pink">
 <!-- Name --> 
 <h1 style="text-align:center">
-<img border=0 src="H:\Fotos\ammuanil MARRIAGE\STILLS\I0DSC_0005 (25).JPG" align="middle"  width="72" Height="72"/>My marriage fotos</h1>
+<img border=0 src="C:\Documents and Settings\isdc1011\My Documents\My Pictures\IMG_2917.JPG" align="middle"  width="72" Height="72"/>My family</h1>
 <!-- Address God--> 
 <p><i><b>We thank God for everything in our life:):)</i> </B></P>
 <h1> Our foto</h1>
-<img border=0 src="H:\Fotos\ammuanil MARRIAGE\3 MRRIAGE/G0DSC_0229.JPG" width="404" Height="404"/>
+<img border=0 src="C:\Documents and Settings\isdc1011\My Documents\My Pictures\IMG_2481.JPG" width="404" Height="404"/>
 <h1> table formation<h1><Table border="8" cellpadding="10">
 <caption>OUR THOUGHTS</caption>
 <tr><td>God </td><td>we</td><Td>lov u.</td><td>Thank u</td><td>for<Ol><li> F no.</li><LI>and evrything</ol></li></td></tr>
